default/objects/RM_Node_Coordinate__c/RM_Node_Coordinate__c.object-meta.xml
<CustomObject>
    <label>RM Node Coordinate</label>
    <nameField>
        <displayFormat>RMNodeCoordinate-{0000}</displayFormat>
        <label>RM Node Coordinate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RM Node Coordinates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>