default/objects/RM_Node_Coordinate__c/fields/Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plan</label>
    <referenceTo>Account_Plan__c</referenceTo>
    <relationshipLabel>RM Node Coordinates</relationshipLabel>
    <relationshipName>RM_Node_Coordinates</relationshipName>
    <type>Lookup</type>
</CustomField>