default/objects/RM_Node_Coordinate__c/fields/Relationship_Map__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Map__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship Map</label>
    <referenceTo>Relationship_Map__c</referenceTo>
    <relationshipLabel>RM Node Coordinates</relationshipLabel>
    <relationshipName>RM_Node_Coordinates</relationshipName>
    <type>Lookup</type>
</CustomField>