default/objects/RM_Node_Coordinate__c/fields/X__c.field-meta.xml
<CustomField>
    <fullName>X__c</fullName>
    <description>X Coordinate</description>
    <inlineHelpText>X Coordinate</inlineHelpText>
    <label>X</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>