default/objects/RM_Node_Coordinate__c/fields/Y__c.field-meta.xml
<CustomField>
    <fullName>Y__c</fullName>
    <label>Y</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>